--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <a href="https://www.w3schools.com/java/default.asp">
         <img src="https://i.pinimg.com/originals/f1/ea/a7/f1eaa7278f64e27128e062a3de918265.png" height="50px" width="50px" alt="Java">
       </a>
+      <a href="https://www.w3schools.com/python/">
+        <img src="https://th.bing.com/th/id/OIP.HfmhwCHC2kbVafk1QzbdzQHaHa?rs=1&pid=ImgDetMain" height="50px" width="50px" alt="Python">
+      </a>
     </div>
 </div>
 </div>
